--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -21,8 +21,6 @@ steps:
     ng build --prod
   displayName: 'npm install and build'
 
-- task: PublishTestResults@2
-  condition: succeededOrFailed()
+- task: PublishBuildArtifacts@1
   inputs:
-    testRunner: JUnit
-    testResultsFiles: '**/TEST-RESULTS.xml'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)'
