Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -24,7 +24,8 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(build.artifactStagingDirectory)' 
+    PathtoPublish: '$(System.DefaultWorkingDirectory)' 
+
     
    
 - task: ArchiveFiles@2
